--- a/Laroni-Travel/View/ReizenView.xaml
+++ b/Laroni-Travel/View/ReizenView.xaml
@@ -20,12 +20,12 @@
                 <GradientStop Color="#B3005E" Offset="1" />
             </LinearGradientBrush>
         </Grid.Background>
-        <ScrollViewer VerticalScrollBarVisibility="auto" HorizontalScrollBarVisibility="Auto" Padding="200 0 0 0">
+        <ScrollViewer VerticalScrollBarVisibility="auto" HorizontalScrollBarVisibility="Auto" Padding="200 0 0 0" Margin="0,-10,0,10">
             <Grid Margin="200 0 0 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
-                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -79,19 +79,24 @@
                         <DataGridTextColumn Binding="{Binding Einddatum}" Header="Einddatum" />
                         <DataGridTextColumn Binding="{Binding Prijs}" Header="Prijs" />
                         <DataGridTextColumn Binding="{Binding Drinkgeld}" Header="Drinkgeld" />
+                        <DataGridTextColumn Binding="{Binding Deelnemers}" Header="Deelnemers" />
                     </DataGrid.Columns>
                 </DataGrid>
                 <ComboBox
-    Width="256"
-    materialDesign:HintAssist.Hint="Some item"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left"
+    Width="250"
+    materialDesign:HintAssist.Hint="Thema"
     IsEnabled="{Binding Path=IsChecked, ElementName=OutlinedComboBoxEnabledCheckBox}"
     ItemsSource="{Binding Thema}"
      SelectedValue="{Binding ReisRecord.ThemaId, ValidatesOnDataErrors=True}"
     Style="{StaticResource MaterialDesignOutlinedComboBox}"
     Grid.Row="2" Grid.Column="0" Background="White" Margin="10" />
                 <ComboBox
-    Width="256"
-    materialDesign:HintAssist.Hint="Some item"
+                    Width="250"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left"
+    materialDesign:HintAssist.Hint="Leeftijdscategorieën"
     IsEnabled="{Binding Path=IsChecked, ElementName=OutlinedComboBoxEnabledCheckBox}"
     ItemsSource="{Binding LeeftijdsCategorie}"
      SelectedValue="{Binding ReisRecord.LeeftijdsCategorieId, ValidatesOnDataErrors=True}"
@@ -99,28 +104,7 @@
     Grid.Row="3" Grid.Column="0" Background="White" Margin="10" />
 
                 <TextBox
-                    Text="{Binding DeelnemerRecord.Geslacht}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Geslacht"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="4" Grid.Column="0" Background="White" Margin="10" />
-                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Geboortedatum" Grid.Row="5" Grid.Column="0" Text="{Binding Geboortedatum}" />
-                <TextBox
-                    Text="{Binding DeelnemerRecord.Email}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Email"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="6" Grid.Column="0" Background="White" Margin="10" />
-                <TextBox
-                    Text="{Binding DeelnemerRecord.Straatnaam}"
+                    Text="{Binding ReisRecord.Bestemming.Straatnaam}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Straatnaam"
     AcceptsReturn="True"
@@ -129,8 +113,9 @@
     TextWrapping="Wrap"
     VerticalScrollBarVisibility="Auto"
     Grid.Row="2" Grid.Column="1" Background="White" Margin="10" />
+
                 <TextBox
-                    Text="{Binding DeelnemerRecord.Huisnummer}"
+                    Text="{Binding ReisRecord.Bestemming.Huisnummer}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Huisnummer"
     AcceptsReturn="True"
@@ -140,7 +125,7 @@
     VerticalScrollBarVisibility="Auto"
     Grid.Row="3" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
-                    Text="{Binding DeelnemerRecord.Postcode}"
+                    Text="{Binding ReisRecord.Bestemming.Postcode}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Postcode"
     AcceptsReturn="True"
@@ -150,7 +135,7 @@
     VerticalScrollBarVisibility="Auto"
     Grid.Row="4" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
-                    Text="{Binding DeelnemerRecord.Gemeente}"
+                    Text="{Binding ReisRecord.Bestemming.Gemeente}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Gemeente"
     AcceptsReturn="True"
@@ -159,34 +144,34 @@
     TextWrapping="Wrap"
     VerticalScrollBarVisibility="Auto"
     Grid.Row="5" Grid.Column="1" Background="White" Margin="10" />
-                <CheckBox
-                    IsChecked="{Binding DeelnemerRecord.Ziekenfonds}"
-        Content="Lid Ziekenfonds" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
-                <CheckBox
-                    IsChecked="{Binding DeelnemerRecord.Monitor}"
-        Content="Monitor" Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
-                <CheckBox
-                    IsChecked="{Binding DeelnemerRecord.HoofdMonitor}"
-        Content="Hoofdmonitor" Grid.Row="4" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
-                <CheckBox
-                    IsChecked="{Binding DeelnemerRecord.Admin}"
-        Content="Admin" Grid.Row="5" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="2" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenDeelnemer">
+                <TextBox
+                    Text="{Binding ReisRecord.Bestemming.Land}"
+    VerticalAlignment="Top"
+    materialDesign:HintAssist.Hint="Land"
+    AcceptsReturn="True"
+    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+    TextWrapping="Wrap"
+    VerticalScrollBarVisibility="Auto"
+    Grid.Row="6" Grid.Column="1" Background="White" Margin="10" />
+                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Startdatum" Grid.Row="2" Grid.Column="2" Text="{Binding StartDatum}" />
+                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Einddatum" Grid.Row="3" Grid.Column="2" Text="{Binding EindDatum}" />
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="2" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenDeelnemer">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="add" Margin="0 0 10 0" />
-                        <TextBlock>Deelnemer</TextBlock>
+                        <TextBlock>Reis</TextBlock>
                     </StackPanel>
                 </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="3" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="AanpassenDeelnemer">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="3" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="AanpassenDeelnemer">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Edit" Margin="0 0 10 0" />
-                        <TextBlock>Deelnemer</TextBlock>
+                        <TextBlock>Reis</TextBlock>
                     </StackPanel>
                 </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="4" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenDeelnemer">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="4" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenDeelnemer">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Delete" Margin="0 0 10 0" />
-                        <TextBlock>Deelnemer</TextBlock>
+                        <TextBlock>Reis</TextBlock>
                     </StackPanel>
                 </Button>
                 <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="5" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ResettenDeelnemer">
@@ -195,72 +180,28 @@
                         <TextBlock>Annuleren</TextBlock>
                     </StackPanel>
                 </Button>
-                <DataGrid ItemsSource="{Binding MedischLijst}"
-                  SelectedItem="{Binding SelectedMedisch}"
-                  AutoGenerateColumns="False" IsReadOnly="True"
-                  AlternatingRowBackground="#BC80AB"
-                  Background="LightGray"
-                  Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Margin="10 30 10 10">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Omschrijving}" Header="Aandoening" />
-                        <DataGridTextColumn Binding="{Binding Medicatie}" Header="Medicatie" />
-                        <DataGridTextColumn Binding="{Binding Behandeling}" Header="Behandeling" />
-                    </DataGrid.Columns>
-                </DataGrid>
-                <TextBox
-                    Text="{Binding MedischRecord.Omschrijving}"
-                    VerticalAlignment="Top"
-                    materialDesign:HintAssist.Hint="Aandoening"
-                    AcceptsReturn="True"
-                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                    TextWrapping="Wrap"
-                    VerticalScrollBarVisibility="Auto"
-                    Grid.Row="9" Grid.Column="0" Background="White" Margin="10" />
-                <TextBox
-                    Text="{Binding MedischRecord.Medicatie}"
-                    VerticalAlignment="Top"
-                    materialDesign:HintAssist.Hint="Medicatie"
-                    AcceptsReturn="True"
-                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                    TextWrapping="Wrap"
-                    VerticalScrollBarVisibility="Auto"
-                    Grid.Row="9" Grid.Column="1" Background="White" Margin="10" />
-                <TextBox
-                    Text="{Binding MedischRecord.Behandeling}"
-                    VerticalAlignment="Top"
-                    materialDesign:HintAssist.Hint="Behandeling"
-                    AcceptsReturn="True"
-                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                    TextWrapping="Wrap"
-                    VerticalScrollBarVisibility="Auto"
-                    Grid.Row="10" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2" Background="White" Margin="10" />
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="8" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenMedisch">
-                    <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="add" Margin="0 0 10 0" />
-                        <TextBlock>Ziekte</TextBlock>
-                    </StackPanel>
-                </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="9" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="AanpassenMedisch">
-                    <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Edit" Margin="0 0 10 0" />
-                        <TextBlock>Ziekte</TextBlock>
-                    </StackPanel>
-                </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="10" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenMedisch">
-                    <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Delete" Margin="0 0 10 0" />
-                        <TextBlock>Ziekte</TextBlock>
-                    </StackPanel>
-                </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="11" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ResettenMedisch">
-                    <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Cancel" Margin="0 0 10 0" />
-                        <TextBlock>Annuleren</TextBlock>
-                    </StackPanel>
-                </Button>
+                <ListView ItemsSource="{Binding Reizen.Deelnemers}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn
+        DisplayMemberBinding="{Binding DeelnemerId}"
+        Header="Deelnemer ID" />
+                            <GridViewColumn
+        DisplayMemberBinding="{Binding Naam}"
+        Header="Naam" />
+                            <GridViewColumn
+        Header="Betaald">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <CheckBox
+            VerticalAlignment="Center"
+            IsChecked="{Binding IsSelected}" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
             </Grid>
         </ScrollViewer>
         <Grid Width="200" HorizontalAlignment="Left" Background="#060047">
