--- a/Laroni-Travel/View/OpleidingView.xaml
+++ b/Laroni-Travel/View/OpleidingView.xaml
@@ -20,6 +20,184 @@
                 <GradientStop Color="#B3005E" Offset="1" />
             </LinearGradientBrush>
         </Grid.Background>
+        <ScrollViewer VerticalScrollBarVisibility="auto" HorizontalScrollBarVisibility="Auto" Padding="200 0 0 0" Margin="0,-10,0,10">
+            <Grid Margin="200 0 0 0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <TextBox
+                    Text="{Binding Voornaam}"
+        materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
+        VerticalAlignment="center"
+        materialDesign:HintAssist.Hint="Search..."
+        AcceptsReturn="True"
+        IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBox}"
+        Style="{StaticResource MaterialDesignOutlinedTextBox}"
+        TextWrapping="Wrap"
+        VerticalScrollBarVisibility="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Foreground="Black" Background="White" Margin="15" />
+                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="0" Grid.Column="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="Zoeken">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" />
+                        <TextBlock>Zoeken</TextBlock>
+                    </StackPanel>
+                </Button>
+                <DataGrid ItemsSource="{Binding Opleidingen}"
+                  SelectedItem="{Binding SelectedOpleiding}"
+
+                  AutoGenerateColumns="False" IsReadOnly="True"
+                  AlternatingRowBackground="#BC80AB"
+                  Background="LightGray"
+                  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" Margin="10">
+                    <DataGrid.Style>
+                        <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource MaterialDesignDataGrid}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Path=Items.Count, RelativeSource={RelativeSource Self}}" Value="0">
+                                    <Setter Property="Visibility" Value="Hidden" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </DataGrid.Style>
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Binding="{Binding Beschrijving}" Header="Beschrijving" />
+                        <DataGridTextColumn Binding="{Binding Datum}" Header="Datum" />
+                        <DataGridTextColumn Binding="{Binding Bestemming.Straatnaam}" Header="Straatnaam" />
+                        <DataGridTextColumn Binding="{Binding Bestemming.Huisnummer}" Header="Huisnr." />
+                        <DataGridTextColumn Binding="{Binding Bestemming.Postcode}" Header="PC" />
+                        <DataGridTextColumn Binding="{Binding Bestemming.Gemeente}" Header="Gemeente" />
+                        <DataGridTextColumn Binding="{Binding Bestemming.Land}" Header="Land" />
+                        <DataGridTextColumn Binding="{Binding Deelnemers}" Header="Deelnemers" />
+                    </DataGrid.Columns>
+                </DataGrid>
+                <TextBox
+                    Text="{Binding Beschrijving}"
+    VerticalAlignment="Top"
+    materialDesign:HintAssist.Hint="Beschrijving"
+    AcceptsReturn="True"
+    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+    TextWrapping="Wrap"
+    VerticalScrollBarVisibility="Auto"
+    Grid.Row="2" Grid.Column="0" Background="White" Margin="10" />
+                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Datum" Grid.Row="3" Grid.Column="0" Text="{Binding Datum}" />
+                <TextBox
+                    Text="{Binding ReisRecord.Bestemming.Straatnaam}"
+    VerticalAlignment="Top"
+    materialDesign:HintAssist.Hint="Straatnaam"
+    AcceptsReturn="True"
+    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+    TextWrapping="Wrap"
+    VerticalScrollBarVisibility="Auto"
+    Grid.Row="2" Grid.Column="1" Background="White" Margin="10" />
+
+                <TextBox
+                    Text="{Binding ReisRecord.Bestemming.Huisnummer}"
+    VerticalAlignment="Top"
+    materialDesign:HintAssist.Hint="Huisnummer"
+    AcceptsReturn="True"
+    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+    TextWrapping="Wrap"
+    VerticalScrollBarVisibility="Auto"
+    Grid.Row="3" Grid.Column="1" Background="White" Margin="10" />
+                <TextBox
+                    Text="{Binding ReisRecord.Bestemming.Postcode}"
+    VerticalAlignment="Top"
+    materialDesign:HintAssist.Hint="Postcode"
+    AcceptsReturn="True"
+    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+    TextWrapping="Wrap"
+    VerticalScrollBarVisibility="Auto"
+    Grid.Row="4" Grid.Column="1" Background="White" Margin="10" />
+                <TextBox
+                    Text="{Binding ReisRecord.Bestemming.Gemeente}"
+    VerticalAlignment="Top"
+    materialDesign:HintAssist.Hint="Gemeente"
+    AcceptsReturn="True"
+    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+    TextWrapping="Wrap"
+    VerticalScrollBarVisibility="Auto"
+    Grid.Row="5" Grid.Column="1" Background="White" Margin="10" />
+                <TextBox
+                    Text="{Binding ReisRecord.Bestemming.Land}"
+    VerticalAlignment="Top"
+    materialDesign:HintAssist.Hint="Land"
+    AcceptsReturn="True"
+    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+    TextWrapping="Wrap"
+    VerticalScrollBarVisibility="Auto"
+    Grid.Row="6" Grid.Column="1" Background="White" Margin="10" />
+
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="2" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenOpleiding">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="FloppyDisk" Margin="0 0 10 0" />
+                        <TextBlock>Opleiding</TextBlock>
+                    </StackPanel>
+                </Button>
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="3" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="AanpassenOpleiding">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Edit" Margin="0 0 10 0" />
+                        <TextBlock>Opleiding</TextBlock>
+                    </StackPanel>
+                </Button>
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="4" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenOpleiding">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Delete" Margin="0 0 10 0" />
+                        <TextBlock>Opleiding</TextBlock>
+                    </StackPanel>
+                </Button>
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="5" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ResettenOpleiding">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Cancel" Margin="0 0 10 0" />
+                        <TextBlock>Annuleren</TextBlock>
+                    </StackPanel>
+                </Button>
+                <ListView ItemsSource="{Binding Opleiding.DeelnemerOpleiding}" Height="175" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn
+        DisplayMemberBinding="{Binding DeelnemerId}"
+        Header="Deelnemer ID" />
+                            <GridViewColumn
+        DisplayMemberBinding="{Binding Naam}"
+        Header="Naam" />
+                            <GridViewColumn
+        Header="Betaald">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <CheckBox
+            VerticalAlignment="Center"
+            IsChecked="{Binding IsSelected}" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </Grid>
+        </ScrollViewer>
         <Grid Width="200" HorizontalAlignment="Left" Background="#060047">
             <StackPanel>
                 <Grid Height="150" VerticalAlignment="Top">
